salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/Bandeja_Contable__c.object-meta.xml
<CustomObject>
    <description>Un envío de documentación contable de una empresa (cabecera). Cada archivo del envío es un Bandeja_Contable_Archivo__c; los archivos se guardan en Google Cloud Storage y sus metadatos en Cloud SQL.</description>
    <label>Bandeja Contable</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Nº bandeja</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bandejas Contables</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>