salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Archivo_nombre__c.field-meta.xml
<CustomField>
    <fullName>Archivo_nombre__c</fullName>
    <label>Nombre del archivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>