salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Archivo_tamano__c.field-meta.xml
<CustomField>
    <fullName>Archivo_tamano__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tamaño (bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>