salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Archivo_tipo__c.field-meta.xml
<CustomField>
    <fullName>Archivo_tipo__c</fullName>
    <label>Tipo MIME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>