salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Archivos_error__c.field-meta.xml
<CustomField>
    <fullName>Archivos_error__c</fullName>
    <label>Nº archivos con error</label>
    <summaryFilterItems>
        <field>Bandeja_Contable_Archivo__c.Estado__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Bandeja_Contable_Archivo__c.Bandeja__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>