salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Archivos_total__c.field-meta.xml
<CustomField>
    <fullName>Archivos_total__c</fullName>
    <label>Nº archivos</label>
    <summaryForeignKey>Bandeja_Contable_Archivo__c.Bandeja__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>