salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Documentos_total__c.field-meta.xml
<CustomField>
    <fullName>Documentos_total__c</fullName>
    <description>Número de documentos (facturas) resultantes del procesamiento OCR en Google. Lo actualiza Google al terminar.</description>
    <label>Nº documentos OCR</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>