salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bandejas Contables</relationshipLabel>
    <relationshipName>Bandeja_Contable</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>