salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Estado de trabajo de la bandeja (revisión de sus documentos OCR). El estado de la subida de archivos es Estado_subida__c.</description>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Completado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>