salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Estado_subida__c.field-meta.xml
<CustomField>
    <fullName>Estado_subida__c</fullName>
    <description>Resumen de la subida de los archivos, calculado a partir de sus estados.</description>
    <formula>IF(Archivos_total__c = 0, &quot;Sin archivos&quot;,
IF(Archivos_sincronizados__c = Archivos_total__c, &quot;Completada&quot;,
IF(Archivos_error__c &gt; 0, &quot;Con errores&quot;, &quot;En curso&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado de la subida</label>
    <type>Text</type>
</CustomField>