salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Google_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Id__c</fullName>
    <description>Id de la bandeja en Cloud SQL (tabla bandejas). Se rellena al confirmar el primer archivo.</description>
    <label>Id en Google</label>
    <length>255</length>
    <type>Text</type>
</CustomField>