salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <description>Canal por el que llegó la documentación. Lo fija Apex según el tipo de usuario.</description>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Portal</fullName>
                <label>Portal del cliente</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>