salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Tipo_documentacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_documentacion__c</fullName>
    <label>Tipo de documentación</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_Documentacion_Bandeja_Contable</valueSetName>
    </valueSet>
</CustomField>