salesforce-sandbox/force-app/main/default/objects/Bandeja_Contable__c/fields/Ultimo_error__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_error__c</fullName>
    <label>Último error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>